Hide vertical overflow to prevent scrollbar during animation
A vertical scroll bar would become visible while the animation was running.

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -71,6 +71,7 @@ body {
   background-color: rgba(18, 18, 18, 1);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-y: hidden;
 }
 
 ::-moz-selection {
